overflow scroll bug is fixed

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -16,12 +16,6 @@ body {
   height: 100%;
 }
 
-html,
-body,
-.app {
-  overflow-x: hidden;
-}
-
 body {
   margin: 0;
   padding: 0;
